--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 #        condition: on-failure
     volumes:
       - .:/usr/app
-    command: npm start
+    command: npm run dev
     ports:
       - "80:8080"
     networks:
